--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,12 @@
-
-
-import tensorflow as tf
-import keras.preprocessing.image
-import keras.utils
-import matplotlib.pyplot as plt
-from keras.preprocessing.image import ImageDataGenerator
-import keras.callbacks
-from keras.models import  model_from_json,Sequential
-from keras.models import Model as Md
-from keras.layers import *
-from keras.callbacks import EarlyStopping, ModelCheckpoint
-from keras.optimizers import *
-from attention import Attention
-
-#from skimage import color
-#from sklearn.metrics import accuracy_score
-#import cv2b
-
-import pandas as pd
-import numpy as np
-import os
-from keras.layers import Flatten
-
+# This file is used by pip to install required python packages
+# Usage: pip install -r requirements.txt
+Click==7.0
+Flask==1.1.2
+Flask-SQAlchemy==2.4.4
+guincorn==20.1.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+SQLAlchemy==1.3.17
+Werkzeug==0.16.0
 
