--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # This file is used by pip to install required python packages
 # Usage: pip install -r requirements.txt
 Click==7.0
-Flask==1.1.2
-Flask-SQAlchemy
-guincorn==20.1.0
+Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.11.2
+Jinja2=2.10.3
 MarkupSafe==1.1.1
-SQLAlchemy
+SQLAlchemy==1.3.17
 Werkzeug==0.16.0
 
